src/objects/MUSW__Automation_Rule__c.object
<CustomObject>
    <description>Automation Rule Outcomes to apply when specific data criteria is met.</description>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorize / Issue</fullName>
                </value>
                <value>
                    <fullName>Complaint Inspections</fullName>
                </value>
                <value>
                    <fullName>Complaints</fullName>
                </value>
                <value>
                    <fullName>Disposition</fullName>
                </value>
                <value>
                    <fullName>Errors</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Letters</fullName>
                </value>
                <value>
                    <fullName>Permit Inspections</fullName>
                </value>
                <value>
                    <fullName>Permits</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Plan Review</fullName>
                </value>
                <value>
                    <fullName>Submissions</fullName>
                </value>
                <value>
                    <fullName>Tasks</fullName>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
                <value>
                    <fullName>Violations</fullName>
                </value>
                <value>
                    <fullName>Zoning Review</fullName>
                </value>
                <value>
                    <fullName>Alerts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether the rule should be evaluated or ignored.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__CVRecordID__c</fullName>
        <description>CV unique record id for the rule</description>
        <externalId>true</externalId>
        <label>CVRecordID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <description>This provides further details about the rule beyond the name. It may include the business case, or technical rationalization.</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Effective_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date the rule starts to be active. If blank, rule is active as soon as made active.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__End_Date__c</fullName>
        <description>Date the rule ceases to be active. If blank, rule is active forever.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Filter_Count__c</fullName>
        <description>Legacy</description>
        <label>Filter Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Filter_Group_Count__c</fullName>
        <description>Legacy</description>
        <label>Filter Group Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Filter_Index_Long__c</fullName>
        <description>Legacy</description>
        <label>Filter Index Long</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Filter_Index__c</fullName>
        <description>Legacy</description>
        <label>Filter Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Filter_Table_Count__c</fullName>
        <description>Legacy</description>
        <label>Filter Table Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Filter_Table_Index__c</fullName>
        <description>Legacy</description>
        <label>Filter Table Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Order__c</fullName>
        <defaultValue>999</defaultValue>
        <description>Determines the order in which rules are evaluated and applied against the same triggering object. The default is 999 (typically last).</description>
        <label>Order</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Result_Count__c</fullName>
        <description>Legacy</description>
        <label>Result Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Result_Group_Count__c</fullName>
        <description>Legacy</description>
        <label>Result Group Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Result_Index__c</fullName>
        <description>Legacy</description>
        <label>Result Index</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Result_Table_Count__c</fullName>
        <description>Legacy</description>
        <label>Result Table Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Result_Table_Index__c</fullName>
        <description>Legacy</description>
        <label>Result Table Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Track_No__c</fullName>
        <description>The unique number assigned to the rule that it used for data migration.</description>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <description>Specifies under what context the rule is applied - i.e., as part of a batch, manually assessed, or triggered.</description>
        <inlineHelpText>eg. Assess for fee schedules, Trigger for immediate actions, and Batch for batch processes only. If blank, it is like Assess</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assess</fullName>
                </value>
                <value>
                    <fullName>Trigger</fullName>
                    <default>true</default>
                    <label>Trigger</label>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Automation Rule</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>MUSW__Order__c</columns>
        <columns>MUSW__Filter_Table_Index__c</columns>
        <columns>MUSW__Result_Table_Index__c</columns>
        <columns>MUSW__Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Inspection</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Violation</value>
        </filters>
        <label>Inspection &amp; Violation</label>
    </listViews>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Order__c</columns>
        <columns>MUSW__Filter_Table_Index__c</columns>
        <columns>MUSW__Result_Table_Index__c</columns>
        <columns>MUSW__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Automation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>